--- a/package.json
+++ b/package.json
@@ -8,23 +8,35 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.0",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-firebase/app": "^13.0.1",
+    "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.0.9",
-    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native": "^5.9.8",
     "@react-navigation/native-stack": "^6.2.5",
-    "expo": "~42.0.1",
-    "expo-status-bar": "~1.0.4",
-    "firebase": "^8.2.3",
+    "@react-navigation/stack": "^5.14.2",
+    "expo": "~40.0.0",
+    "expo-status-bar": "~1.0.3",
+    "firebase": "7.9.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-styled-components": "^2.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-action-button": "^2.8.5",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-image-crop-picker": "^0.37.2",
+    "react-native-image-picker": "^4.3.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-onboarding-swiper": "^1.1.4",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
+    "react-native-web": "~0.13.12",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
+    "rebuild": "^0.1.2",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "~7.9.0"
   },
   "private": true
 }
