--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^5.14.2",
     "expo": "~40.0.0",
+    "expo-image-picker": "^11.0.3",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
     "react": "16.13.1",
@@ -33,6 +34,7 @@
     "react-native-web": "~0.13.12",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "rebuild": "^0.1.2",
+    "styled-components": "^5.3.3",
     "validator": "^13.5.2"
   },
   "devDependencies": {
