--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-native-image-picker": "^4.3.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-onboarding-swiper": "^1.1.4",
+    "react-native-paper": "^4.10.1",
+    "react-native-picker": "^4.3.7",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
